timezone set for proper save time and date in MySQL, JS validation to form view added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/charity-donation?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/charity-donation?serverTimezone=Europe/Warsaw&useLegacyDatetimeCode=false&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=coderslab
-
 
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
@@ -11,3 +10,4 @@ spring.mvc.locale-resolver=fixed
 
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
+
